Fix premium colors var in dark mode

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -27,7 +27,6 @@
                 padding: 2px;
 
                 @media (prefers-color-scheme: dark) {
-                    background-color: goldenrod;
                     color: $background_color;
                 }
             }
